change card title price

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="price-card">
             <img src="/images/boxprice2.svg" alt="" />
             <div id="text-card1">
-              <h3>Standard transfer</h3>
+              <h3>Enterprise transfer</h3>
               <p>We’ll re-create your site in Webflow. Like magic!</p>
             </div>
             <div id="text-card2">
@@ -148,7 +148,7 @@
           <div class="price-card">
             <img src="/images/boxprice3.svg" alt="" />
             <div id="text-card1">
-              <h3>Standard transfer</h3>
+              <h3>VIP transfer</h3>
               <p>We’ll re-create your site in Webflow. Like magic!</p>
             </div>
             <div id="text-card2">
